<resources>
    <string name="app_name">SD News</string>
    <string name="txtTitle">Title</string>
    <string name="txtDate">Date</string>
    <string name="txtContent">Content</string>
    <string name="upButton">Up</string>
    <string name="downButton">Down</string>
    <string name="txtpublisher">Publisher</string>
    <string name="txtprivacypolicy">Privacy Policy</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="contactButton">Contact Button</string>
    <string name="the_hindu">The Hindu</string>
    <string name="ndtv">NDTV</string>
    <string name="toi">TOI</string>
    <string name="read_full_article">Read Full Article</string>
    <string name="share">🔗 Share</string>
    <string name="read_full">Read Full →</string>

</resources>